all fundamental XP and info table components have been included, awaiting first check for broken links, typos, etc

--- a/index.html
+++ b/index.html
@@ -591,7 +591,8 @@
         <hr>
         <div id="xp_line">
             <div class="code">
-                <a href="https://forensic-architecture.org/investigation/the-killing-of-oscar-perez" target="_blank" rel="noreferrer noopener">
+                <a href="https://forensic-architecture.org/investigation/the-killing-of-oscar-perez" target="_blank"
+                    rel="noreferrer noopener">
                     <p><mark>PJ02-18</mark></p>
                 </a>
             </div>
@@ -652,7 +653,7 @@
         <div id="xp_line">
             <div class="code">
                 <!-- <a href="https://www.gold.ac.uk/calendar/?id=12044" target="_blank" rel="noreferrer noopener"> -->
-                    <p>PB01-18</p>
+                <p>PB01-18</p>
                 <!-- </a> -->
             </div>
             <div class="year">
@@ -671,7 +672,8 @@
         <hr>
         <div id="xp_line">
             <div class="code">
-                <a href="https://research-architecture.org/Logistical-Nightmares" target="_blank" rel="noreferrer noopener">
+                <a href="https://research-architecture.org/Logistical-Nightmares" target="_blank"
+                    rel="noreferrer noopener">
                     <p><mark>PJ01-18</mark></p>
                 </a>
             </div>
@@ -691,7 +693,7 @@
         <hr>
     </div>
     <div id="info_table">
-        <h1>Info</h1>
+        <h1>Info ▼</h1>
         <p>Clive Vella is an open-source researcher and educator with a background in sound and music.</p>
 
         <p>Currently, he serves as Data Manager at <a href="https://airwars.org" target="_blank"
@@ -732,7 +734,20 @@
                 target="_blank" rel="noreferrer noopener">Schirn Kunsthalle</a>, and elsewhere. </p>
 
         <h1>Professional Experience</h1>
+        <p> 2024 > Now | <strong>Airwars</strong>: Data Manager</p>
+        <p> 2022 > 2024 | <strong>Airwars</strong>: Open Source Research lead</p>
+        <p> 2020 > 2022 | <strong>Airwars</strong>: Specialist Geolocation Researcher</p>
         <h1>Academic Background</h1>
+        <p> 2017 > 2018 | <strong>MA (Distinction)</strong>: Research Architecture, Goldsmiths, University of London
+            (UK)</p>
+        <p> 2013 > 2016 | <strong>BA Hons (First)</strong>: Sound Arts & Design, University of the Arts, London (UK)
+        </p>
+        <h1>Contact</h1>
+        <ul>
+            <li>email:<a href="mailto:research.cvella@gmail.com">research.cvella@gmail.com</a></li>
+            <li>bluesky: <a href="https://bsky.app/profile/clivevella.bsky.social" target="_blank"
+                    rel="noreferrer noopener">clivevella.bsky.social</a></li>
+        </ul>
     </div>
 </body>
 
